# neqsim-python

./: .gitignore  .pre-commit-config.yaml  CONDA_PUBLISHING.md  CONTRIBUTING.md  README.md  SECURITY.md  conf.py  createFluid.py  createPythonPackage.bat  environment.yml  index.rst  pyproject.toml  setup.py  startJavaGateway.bat  test_examples.py  updates.md
.devcontainer/: Dockerfile  commands.txt  devcontainer.json  requirements.txt
.githooks/: pre-commit
.github/: RELEASE_TEMPLATE.md  release.yml
.github/workflows/: codeql-analysis.yml  generate-stubs.yml  pre-commit.yaml  publish-to-test-pypi.yml  python-app.yml  runtests.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
_build/html/_static/: alabaster.css  documentation_options.js
conda/: bld.bat  conda_build_config.yaml  meta.yaml
docs/: pvt_simulation.md
docs/release-notes/: v3.10.0.md  v3.11.0.md  v3.12.0.md  v3.13.0.md  v3.14.0.md  v3.15.0.md  v3.9.1.md
examples/: CO2deprezzurizing.py  CarnotCycle.py  GRA.h5  H2Sdistribution.py  OttoCycle.py  PVTexperiment.py  PVTlumping.py  PVTsim.py  PVTtableOLGA.py  RankineCycle.py  RankingCycle.py  TEP08design.py  TPflash.py  TPflashBenchmark.py  TPflashReactive.py  adsorption.py  asterix.py  beggsBrillPipeline.py  braytonProcess.py  compressorCalc.py  compressorCurves.py  compressorTrain.py  createFluid.py  ejectorProcess.py  equationOfState.py  equipmentFactory.py  exergyAnalysis.py  exportgasquality.py  flareSystem.py  flashCalculations.py  fluidCharacterization.py  fluidCreation.py  glycolprocess.py  heatExchanger.py  heatOfCombustion.py  heatpump.py  hydrateCalculations.py  hydrateEquilibrium.py  mechanicalDesign.py  mercury.py  (+37 more)
examples/jupyter/: PVTexperiments.ipynb  TEGdehydration.ipynb  checkMethodsofNeqSimObject.ipynb  examplesInPython.ipynb  gasCompression.ipynb  hydrateFormation.ipynb  phaseEnvelope.ipynb  processBuilderDemo.ipynb  readEclipseE300format.ipynb  separatorDesign.ipynb  separatorEfficiency.ipynb  simpleFlash.ipynb  wetgascompression.ipynb
examples/pvtsimulation/: README.md  fluid_characterization_and_lumping.py  pvt_experiments_java_access.py  pvt_tuning_cme.py  pvt_tuning_cvd.py  pvt_tuning_to_saturation.py  pvt_tuning_viscosity.py
jupyter/: Thermodynamic excercise 1.ipynb  examplesInPython.ipynb  gasoilprocess.ipynb  readEclipseE300format.ipynb  separatorEfficiency.ipynb  testNeqSim.ipynb  wetgascompression.ipynb
jupyter/.ipynb_checkpoints/: Thermodynamic excercise 1-checkpoint.ipynb  Untitled-checkpoint.ipynb  gasoilprocess-checkpoint.ipynb  testNeqSim-checkpoint.ipynb
neqsim/: __init__.py  neqsimpython.py
neqsim.egg-info/: PKG-INFO  SOURCES.txt
neqsim/process/: __init__.py  measurement.py  processTools.py  unitop.py
neqsim/standards/: __init__.py  standardTools.py
neqsim/test/: testNeqSim.py
neqsim/thermo/: thermoTools.py
neqsim_esolbraa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
neqsim_pkg_esolbraa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/: testNeqSim.py
scripts/: generate_stubs.py
src/jneqsim/: __init__.pyi
src/jneqsim-stubs/: __init__.pyi
src/neqsim/: __init__.py  __init__.pyi  javaGateway.py  neqsimpython.py  thermoTools.py
src/neqsim.egg-info/: SOURCES.txt
tests/: __init__.py  conftest.py  test_NeqSim.py  test_conf.py  test_extended_database.py
tests/process/: test_ProcessTools.py  test_dynamic_process.py  test_measurement.py  test_process_config_io_security.py  test_pump.py  test_unitop.py
tests/thermo/: testThermoTools.py  test_ThermoTools.py
(+1126 files in other folders)
