[tool.poetry]
name = "neqsim"
version = "3.0.43"
description = "NeqSim is a tool for thermodynamic and process calculations"
authors = ["Even Solbraa <esolbraa@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Equinor/neqsimpython"
classifiers = ["Operating System :: OS Independent"]

[tool.poetry.dependencies]
python = "^3.8"
JPype1 = "^1.5.0"
numpy = [
        { version = "^1.24.4", markers = "python_version == '3.8'" },
        { version = ">1.25.2", markers = "python_version > '3.8'" },
]
pandas = [
        { version = "^1.3.5", markers = "python_version == '3.8'" },
        { version = "^2.0.3", markers = "python_version > '3.8'" },
]
matplotlib = { version = "^3.7.0", optional = true }
jupyter = { version = "^1.0.0", optional = true }
tabulate = { version = "^0.9.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = ">=23.12,<25.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0" # Higher versions require python 3.9+

[tool.poetry.extras]
interactive = ["matplotlib", "jupyter", "tabulate"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
