[tool.poetry]
name = "neqsim"
version = "3.3.0"
homepage = "https://github.com/Equinor/neqsim-python"
description = "NeqSim is a tool for thermodynamic and process calculations"
authors = ["Even Solbraa <esolbraa@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Equinor/neqsim-python"
classifiers = ["Operating System :: OS Independent"]

[tool.poetry.dependencies]
python = "^3.9"
JPype1 = "^1.5.0"
numpy = ">1.25.2"
pandas = "^2.0.3"
matplotlib = { version = "^3.7.0", optional = true }
jupyter = { version = "^1.0.0", optional = true }
tabulate = { version = "^0.9.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = ">=23.12,<25.0"
pytest = "^7.4.3"
pre-commit = "^3.6.0"
stubgenj = "^0.2.12"  # Generate type stubs for Java classes

[tool.poetry.extras]
interactive = ["matplotlib", "jupyter", "tabulate"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
