[project]
name = "neqsim"
version = "3.14.0"
description = "NeqSim is a tool for thermodynamic and process calculations"
authors = [{ name = "Even Solbraa", email = "esolbraa@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "JPype1>=1.7.0,<2",
    "numpy>1.25.2",
    "pandas>=2.0.3,<3",
]

[project.optional-dependencies]
interactive = [
    "matplotlib>=3.7.0,<4",
    "jupyter>=1.0.0,<2",
    "tabulate>=0.9.0,<0.10",
]

[project.urls]
Homepage = "https://github.com/Equinor/neqsim-python"
Repository = "https://github.com/Equinor/neqsim-python"

[dependency-groups]
dev = [
    "black>=25.0,<28.0",
    "pytest>=8.0.0,<9",
    "pre-commit>=3.6.0,<4",
    "stubgenj>=0.2.12,<0.3",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.wheel]
packages = ["src/neqsim", "src/jneqsim"]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-p no:faulthandler"
